Can now print entire arrays